--- a/src/js/templates/tools.html
+++ b/src/js/templates/tools.html
@@ -4,10 +4,7 @@
   <span class="button active action-select-graphs">Graphs</span>
   <span class="button action-select-table">Raw Data</span>
 </div>
-<div class="toolbox city-list">
-  <h3>Cities</h3>
-</div>
- -->
+-->
 
 <div class="toolbox time-tools">
   <h3>View by:</h3>
@@ -15,6 +12,18 @@
   <span class="button select-daily active" data-action="day">Day</span>
   <span class="button select-weekly" data-action="week">Week</span>
 </div>
+
+<div class="toolbox city-list">
+  <h3>Cities</h3>
+  <span class="button city" data-city="Bangalore">Bangalore</span>
+  <span class="button city" data-city="Boston">Boston</span>
+  <span class="button city" data-city="Geneva">Geneva</span>
+  <span class="button city" data-city="Rio de Janeiro">Rio de Janeiro</span>
+  <span class="button city active" data-city="San Francisco">San Francisco</span>
+  <span class="button city" data-city="Shanghai">Shanghai</span>
+  <span class="button city" data-city="Singapore">Singapore</span>
+</div>
+
 
 <!-- <div class="toolbox last-updated-tools">
 Last updated: <span class="last-updated"></span>
